[package]
name = "rawproto"
description = "use decode_raw function to create a wasm-based method of getting rawproto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
serde = {version = "1.0.136", features = ["derive"]}
web-sys = {version = "0.3.56", features = ["console"] }
js-sys = "0.3.56"
console_error_panic_hook = "0.1.7"
decode_raw = { git = "https://github.com/confio/decode_raw.git", branch = "main" }
